# liveboard

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: db.py  main.py
backend/app/alembic/: env.py
backend/app/core/: config.py  deps.py  errors.py  security.py
backend/app/models/: __init__.py  api_key.py  benchmark_return.py  enums.py  fill.py  fund_movement.py  fx_rate.py  ingestion_batch.py  instrument.py  series.py  share_link.py  strategy.py  user.py
backend/app/routers/: __init__.py  admin.py  api_keys.py  auth.py  benchmark.py  comparisons.py  fx.py  ingestion.py  instruments.py  metrics.py  series.py  share_links.py
backend/app/schemas/: admin.py  api_key.py  auth.py  benchmark.py  comparison.py  fx.py  ingestion.py  instrument.py  metrics.py  series.py  validation.py
backend/app/services/: api_keys.py  benchmark.py  capital.py  comparison.py  fx.py  ingestion.py  metrics.py  pairing.py  series.py  share_links.py  users.py  validation.py
backend/tests/: conftest.py
backend/tests/api/: test_admin.py  test_alembic.py  test_api_keys.py  test_app_smoke.py  test_auth.py  test_benchmark_api.py  test_comparison_api.py  test_conftest_wiring.py  test_fx_api.py  test_health.py  test_ingestion_api.py  test_instruments_api.py  test_validation_api.py
backend/tests/unit/: conftest.py  test_benchmark.py  test_capital.py  test_comparison.py  test_config.py  test_db.py  test_errors.py  test_fx.py  test_ingestion.py  test_metrics.py  test_pairing.py  (+3 more)
(+214 files in other folders)
