[project]
name = "liveboard-backend"
version = "0.1.0"
description = "LiveBoard backend — FastAPI quant analytics data service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "email-validator>=2.0",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "pyjwt>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI Depends(...) in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
"app/alembic/*" = ["E402"]      # alembic env imports after config side-effects
"tests/*" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app/services --cov-branch --cov-report=term-missing --cov-fail-under=90"
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::DeprecationWarning:passlib",
]

[tool.coverage.run]
source = ["app/services"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
